<resources>
    <string name="app_name">MyClosetApp</string>
    <string name="facebook_app_id">807409673105890</string>
    <string name="fb_login_protocol_scheme">fb807409673105890</string>
    <string name="colorGR">Χρώμα:     </string>
    <string name="categoryGR">Κατηγορία: </string>
    <string name="descriptionGR">Περιγραφή: </string>
    <string name="clotheStateGR">Κατάσταση: </string>
    <string name="orderByColorGR">Χρωματική Ταξινόμηση</string>
    <string name="lastWornGR">Φορέθηκε Στις:</string>
    <string name="redGR">Κόκκινο</string>
    <string name="greenGR">Πράσινο</string>
    <string name="blueGR">Μπλε</string>
    <string name="everythingGR">ΟΛΑ</string>
    <string name="pressIfDirty">Αν το ρούχο είναι βρώμικο πατήστε εδώ</string>
    <string name="cameraGR">Κάμερα</string>
    <string name="galleryGR">Συλλογή</string>
    <string name="menGR">ΑΝΔΡΙΚΑ</string>
    <string name="womenGR">ΓΥΝΑΙΚΕΙΑ</string>
    <string name="diyGR">ΕΠΕΛΕΞΕ</string>
    <string name="autoClothingGR">Πρόταση Επιλογής</string>
    <string name="dateOrderGR">Ημερολογιακή Ταξινόμηση</string>
    <string name="dateDescGR">Φθίνουσα</string>
    <string name="moreThan3GR">Μέρες>3</string>
    <string name="moreThan5GR">Μέρες>5</string>
    <string name="moreThan7GR">Μέρες>7</string>
    <string name="moreThan10GR">Μέρες>10</string>
    <string name="moreThan14GR">Μέρες>14</string>
    <string name="moreThan20GR">Μέρες>20</string>
    <string name="moreThan30GR">Μέρες>30</string>
    <string name="washerGR">Βάλε Πλυντήριο</string>
    <string name="helpGR">Βοήθεια</string>
    <string name="aboutUsGR">About Us</string>
    <string name="resetWasherGR">Άδειασμα Κάδου</string>
    <string name="addToWasherGR">Στον κάδο</string>
    <string name="securityBypass">Security Bypass</string>
    <string name="copyright">© MyClosetApp</string>
    <string name="nextGR">Επόμενο</string>
    <string name="previousGR">Προηγούμενο</string>
    <string name="exitGR">Έξοδος</string>
    <string name="nav_drawer_openGR">Άνοιξε το sidebar menu</string>
    <string name="nav_drawer_closeGR">Κλείσε το sidebar menu</string>
    <string name="yesGR">ΝΑΙ</string>
    <string name="noGR">ΟΧΙ</string>
</resources>
