<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OrderByColorActivity">




    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        >

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_format_color_icon_tabs"
            android:text="@string/everythingGR"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_format_color_fill_red"
            android:text="@string/redGR"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_format_color_icon_tabs"
            android:text="@string/greenGR"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_format_color_icon_tabs"
            android:text="@string/blueGR"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

    </com.google.android.material.tabs.TabLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_clothe_color_ordering_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/clothe_item" />


</LinearLayout>