<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <ImageView
            android:id="@+id/clothe_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_to_black_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linear_more_info"
            />
        <LinearLayout
            android:id="@+id/linear_more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/clothe_image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_color_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textColorSimple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colorGR"/>

                <TextView
                    android:id="@+id/textview_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_category_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textCategorySimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoryGR"/>

            <TextView
                android:id="@+id/textview_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_description_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescriptionSimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionGR"/>

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

        </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_last_worn_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textLastWornSimple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastWornGR"/>

                <TextView
                    android:id="@+id/text_view_date_last_worn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_isClean_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textIsCleanSimple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clotheStateGR"/>

            <TextView
                android:id="@+id/textview_cleanstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />

        </LinearLayout>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>